[package]
name = "pestoverse-api"
version = "0.1.0"
edition = "2021"
description = "The official pesto community api"
license = "MPL"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.24.7"
nanoid = "0.4.0"
worker = "0.0.18"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
